--- a/src/app/presentation/carroussel/carroussel.component.html
+++ b/src/app/presentation/carroussel/carroussel.component.html
@@ -1,50 +1,34 @@
-<div *ngif="images && images.length > 0" class="carousel-container">
-  <img *ngFor="let images of img ; let i=index" 
-    [src]="images.image"
-    [ngClass]="{'image-active': selectindex === i}">
+
+<div *ngIf="images && images.length > 0" class="carousel-inner">
+  <img *ngFor="let image of images; let i=index" 
+    [src]="image.image"
+    [ngClass]="{'carousel-item active': indexSelector === i}">
+
+    <div class="card-body">
+      <h2 class="card-title">titre</h2>
+    </div>
+
+    <div *ngIf="indicator" class="carousel-indicators">
+      <span *ngFor="let button of images; let i=index"
+      class="dot"
+        [ngClass]="{'active': indexSelector === i}"
+        (click)="selectImage(i)">
+    </span>
+    </div>
+
+    <div *ngIf="controls">
+      <span 
+      class="carousel-control-prev-icon"
+      (click)="selectImagePrev()">
+    </span>
+    </div>
+
+    <div *ngIf="controls">
+      <span class="carousel-control-next-icon"
+      (click)="selectImageNext()">
+      </span>
+    </div>
+    
 </div>
 
 
-<!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div *ngif="images && images.length > 0; let i = index" class="carousel-item active">
-        <img *ngFor="let lesimages of img " [src]="images?.image" [ngClass]="{'image-active': selectindex===i}" class="d-block w-100" >
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div> -->
-      <!-- <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div> -->
-    <!-- </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-  <div>
-    <div class="container">
-
-    </div>
-  </div> -->
