--- a/src/app/presentation/carroussel/carroussel.component.css
+++ b/src/app/presentation/carroussel/carroussel.component.css
@@ -1,88 +1,119 @@
+.card {
+  opacity: 1;
+  width: 20rem;
+  border: 0;
+  background-color: hsla(0, 0%, 0%, 0);
+}
 
-.carousel-inner{
-    position: relative;
-    margin: auto;
-    text-align: center;
-    width: 1200px;
-    border-radius:  15px;
-    /* box-shadow: 0 6px 15px #dce1e1; */
-    padding-top: 15px;
+.card div.card-body {
+  display: none;
+  width: 18rem;
+}
+
+.card div.text {
+  display: block;
+  width: 100%;
+  opacity: 1;
+  background-color: hsla(0, 0%, 0%, 0);
+  font-style: italic;
+  border: 0;
+}
+
+.card-title {
+  font-family: Impact, Haettenschweiler, "Arial narrow", sans-serif;
+  color: #fff;
+}
+
+.card-text {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  font-size: x-large;
+}
+
+.carousel-inner {
+  position: relative;
+  margin: auto;
+  text-align: center;
+  width: 1200px;
+  border-radius: 15px;
+  /* box-shadow: 0 6px 15px #dce1e1; */
+  padding-top: 15px;
 }
 
 .carousel-inner img {
-  display: none;  
+  display: none;
   border-radius: 15px;
 }
 
 .carousel-inner img.carousel-item {
-    display: block;
-    width: 100%;
-    height: 600px;
+  display: block;
+  width: 100%;
+  height: 600px;
 }
 
-.carousel-indicators{
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-    margin-bottom: 1rem;
+.carousel-indicators {
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-bottom: 1rem;
 }
 
 .dot {
-    cursor: pointer;
-    height: 13px;
-    width: 13px;
-    margin: 0 5px;
-    background-color: #fff;
-    border-radius: 50%;
-    display: inline-block;
-    transition: opacity 0.6s ease ;
-    opacity: 0.5;
-  }
-
-.active,
-.dot:hover{
-    opacity: 1;
-}
-
-.carousel-control-prev-icon{
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    display: flex;
-    bottom: 0;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    left: 0;
-    margin-top: 300px;
-    opacity: 0.5;
-    transition: all; 
+  cursor: pointer;
+  height: 13px;
+  width: 13px;
+  margin: 0 5px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+  transition: opacity 0.6s ease;
+  opacity: 0.5;
 }
 
 .active,
-.carousel-control-prev-icon:hover{
-    opacity: 1;
+.dot:hover {
+  opacity: 1;
 }
 
-.carousel-control-next-icon{
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    display: flex;
-    bottom: 0;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    right: 0;
-    margin-top: 300px;
-    opacity: 0.5;
-    transition: all;  
+.carousel-control-prev-icon {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  display: flex;
+  bottom: 0;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  left: 0;
+  margin-top: 300px;
+  opacity: 0.5;
+  transition: all;
+}
+
+.active,
+.carousel-control-prev-icon:hover {
+  opacity: 1;
+}
+
+.carousel-control-next-icon {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  display: flex;
+  bottom: 0;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  right: 0;
+  margin-top: 300px;
+  opacity: 0.5;
+  transition: all;
 }
 .active,
-.carousel-control-next-icon:hover{
-    opacity: 1;
+.carousel-control-next-icon:hover {
+  opacity: 1;
 }
