première page d'accueil

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<nav class="navbar bg-light">
-  <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">{{ title }}</span>
+<div class="background-image">
+  <div class="card-body">
+    <img
+      src="https://raw.githubusercontent.com/jlagathine/choisyweb/01857a7a9cbd8c5998b4aaa2417dab91629d06c2/CLV%20-%20Logos%20vectoris%C3%A9s-20221115T085445Z-001/CLV%20-%20Logos%20vectoris%C3%A9s/Logo%20CLV%20blanc%20-%20transparent.svg"
+    />
   </div>
-</nav>
+</div>
 
-<app-carroussel></app-carroussel>
+<!-- <app-carroussel [autoSlide]="false"></app-carroussel> -->
