--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,20 +3,31 @@
   background-size: cover;
   height: 100vh;
 }
+
+.center {
+  justify-content: center;
+  text-align: center;
+}
 .card-body {
-  cursor: pointer;
-  height: 600px;
-  width: 600px;
-  margin-top: 175px;
-  margin-left: 600px;
+  /* display: block; */
+  /* justify-content: center;
+  text-align: center;
   position: absolute;
-  background-color: hsla(0, 0%, 0%, 0);
-  opacity: 1;
+  background-color: rgba(0, 0, 0, 0);
+  opacity: 1; */
 }
 
 .card-body img {
-  height: 600px;
-  width: 600px;
+  height: 400px;
+  width: 400px;
   margin: 0;
-  margin-top: 0;
+  margin-top: 0px;
+  cursor: pointer;
+}
+
+.card-body p {
+  color: #fff;
+  font-size: xx-large;
+  padding-bottom: 20px;
+  cursor: pointer;
 }
