--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,17 @@
 <div class="background-image">
-  <div class="card-body">
-    <img
-      src="https://raw.githubusercontent.com/jlagathine/choisyweb/01857a7a9cbd8c5998b4aaa2417dab91629d06c2/CLV%20-%20Logos%20vectoris%C3%A9s-20221115T085445Z-001/CLV%20-%20Logos%20vectoris%C3%A9s/Logo%20CLV%20blanc%20-%20transparent.svg"
-    />
+  <!-- <nav class="navbar bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+    </div>
+  </nav> -->
+
+  <div class="center">
+    <div class="card-body">
+      <img
+        src="https://raw.githubusercontent.com/jlagathine/choisyweb/01857a7a9cbd8c5998b4aaa2417dab91629d06c2/CLV%20-%20Logos%20vectoris%C3%A9s-20221115T085445Z-001/CLV%20-%20Logos%20vectoris%C3%A9s/Logo%20CLV%20blanc%20-%20transparent.svg"
+      />
+      <p><strong>Choisy la Vie</strong></p>
+    </div>
   </div>
 </div>
 
