--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,14 +7,7 @@
 .center {
   justify-content: center;
   text-align: center;
-}
-.card-body {
-  /* display: block; */
-  /* justify-content: center;
-  text-align: center;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0);
-  opacity: 1; */
+  border-color: black;
 }
 
 .card-body img {
@@ -23,6 +16,7 @@
   margin: 0;
   margin-top: 0px;
   cursor: pointer;
+  margin-top: 30px;
 }
 
 .card-body p {
