--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,26 +1,9 @@
-.background-image {
-  background-image: url("https://www.outsideonline.com/wp-content/uploads/2019/10/23/geyser-yelowstone-burst_h.jpg");
-  background-size: cover;
-  height: 100vh;
+.navbar {
+  background-color: #f1895c;
+  box-shadow: 0px 1px 10px black;
 }
 
-.center {
-  justify-content: center;
-  text-align: center;
-}
-
-.card-body img {
-  height: 400px;
-  width: 400px;
-  margin: 0;
-  margin-top: 0px;
+.navbar-brand {
   cursor: pointer;
-  margin-top: 30px;
-}
-
-.card-body p {
   color: #fff;
-  font-size: xx-large;
-  padding-bottom: 20px;
-  cursor: pointer;
 }
