--- a/src/app/presentation/carroussel/carroussel.component.css
+++ b/src/app/presentation/carroussel/carroussel.component.css
@@ -79,6 +79,20 @@
   opacity: 1;
 }
 
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.7;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .carousel-control-prev-icon {
   cursor: pointer;
   position: absolute;
