--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a class="navbar-brand" routerLink="/accueil"
       ><strong>{{ title }}</strong></a
     >
+    <a class="navbar-brand" href="authentification">{{ auth }}</a>
   </div>
 </nav>
 
