--- a/src/app/presentation/authentification/authentification.component.html
+++ b/src/app/presentation/authentification/authentification.component.html
@@ -1,1 +1,16 @@
-<p>authentification works!</p>
+<div class="background-image">
+  <div class="container">
+    <div class="card-content">
+      <label for="nom">Identifiant ou adresse mail</label>
+      <input type="text" />
+    </div>
+    <div class="card-content">
+      <label for="password">Mot de passe</label>
+      <input type="text" />
+      <div class="card-content">
+        <button type="button">Se connecter</button>
+        <a href="Mot de passe oublié">Mot de passe oublié</a>
+      </div>
+    </div>
+  </div>
+</div>
